5.0.0 -> 5.1a1:
    - jbj: tweak up tglob debugging spew, add a Glob(3) stopwatch.
    - jbj: tweak up tget debugging spew, trick in a Stat(2) on path,
	add Stat(2)/Fread(3) stopwatches, display same as "ls -island" output.
    - proyvind: python: add back RPMSENSE_FIND_REQUIRES, needed by rpmlint
    - jbj: use hashFunctionString on URI path for st->st_ino/dp->d_ino values.
    - jbj: rpmhash: expose hash{Equality,Function}String routines.
    - jbj: tweak up tdir debugging spew, add a Opendir(3) stopwatch,
	append pesky /.
    - jbj: tweak up tfts debugging spew, add a Fts(3) stopwatch, append pesky /.
    - jbj: rpmsw: add rpmswPrint to display stopwtch results.
    - jbj: rpmdav: fix: check the pesky trailing '/' on collections correctly.
    - jbj: rpmdav: add _dav_noption OPTIONS disabler, cache 1st result from URI.
    - proyvind: trim multiple slashes from buildroot for check-files script (from Nanar/Olivier Thauvin)
    - proyvind: make rpmdb cpp compliant (from spturtle/Christiaan Welvaart)
    - jbj: "+bing": glob'd directory roots need trailing '/' for DAV URI's.
    - jbj: "+bing": fix: check for glob'd directory roots before traversing.
    - jbj: rpmio: rescuscitate tglob.c.
    - jbj: rpmio: rescuscitate tdir.c.
    - jbj: rpmio: fix: cvtfmode access beyond end-of-string with "r" fmode.
    - jbj: rpmio: rescuscitate tget.c.
    - jbj: fix: (again) rpmtsCheck() needs to return 1 when problems exist.
    - jbj: install rpmcache in bindir, not pkglibdir.
    - jbj: fix: Fopen: heh, I swear I had a rpmExpand() on fmode somewhen ...
    - jbj: rpm.spec: nuke the xar.1 man page.
    - jbj: rpmrpc: split stat(2) prints so valgrind can detect uninitialized.
    - jbj: rpmcache: fix: don't check fo ".i386" suffix if name is too short.
    - jbj: rpmcache: use file:///, not clunkier file://localhost/, url.
    - jbj: rpmcache: add --cache opt-in, rather than --nocache opt-out, for now.
    - proyvind: add sparcv9v2 (Niagara 2) architecture