@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - jbj: tie tget/tdir/tglob/tfts to a rpmio "make check". much more to do ...
     - jbj: tweak up tglob debugging spew, add a Glob(3) stopwatch.
     - jbj: tweak up tget debugging spew, trick in a Stat(2) on path,
 	add Stat(2)/Fread(3) stopwatches, display same as "ls -island" output.
